[gd_scene format=3 uid="uid://c5k8f6tm6ey1j"]

[ext_resource type="Script" uid="uid://c7wwsevmyy7hx" path="res://scripts/uimenu.gd" id="1_j8spw"]

[node name="Uimenu" type="Control" unique_id=666418655]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8spw")

[node name="ColorRect" type="ColorRect" parent="." unique_id=508656760]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12955856, 0.12955844, 0.12955844, 0.7137255)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1329618934]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -25.0
offset_right = 121.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer" unique_id=308194356]
layout_mode = 2
size_flags_horizontal = 4
text = "Get Out!"

[node name="InstructionsLabel" type="Label" parent="VBoxContainer" unique_id=73307792]
layout_mode = 2
size_flags_horizontal = 4
text = "Movement: wasd or arrow keys"

[node name="ScoreLabel" type="Label" parent="VBoxContainer" unique_id=2127805188]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=109868166]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=1804487495]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=13219660]
layout_mode = 2
text = "       "

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=2116286830]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"
